--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -1,5 +1,3 @@
-<!--<h1>Users#show</h1>-->
-<!--<p>Find me in app/views/users/show.html.erb</p>-->
 <div class="row">
   <aside class="col-sm-4">
     <div class="card">
@@ -18,6 +16,6 @@
       <li class="nav-item"><a href="<%= followings_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followings_user_path(@user)) %>">Followings  <span class="badge badge-secondary"><%= @count_followings %></span></a></li>
       <li class="nav-item"><a href="<%= followers_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followers_user_path(@user)) %>">Followers  <span class="badge badge-secondary"><%= @count_followers %></span></a></li>
     </ul>
-    <%= render 'microposts/microposts', microposts: @microposts %>
+    <%= render 'users', users: @followings %>
   </div>
 </div>
